--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -878,6 +878,7 @@ Resources:
   # ECS Service
   ECSService:
     Type: AWS::ECS::Service
+    DependsOn: HTTPListener
     Properties:
       ServiceName: !Sub '${ProjectName}-${Environment}-service'
       Cluster: !Ref ECSCluster
@@ -887,6 +888,10 @@ Resources:
         MinimumHealthyPercent: 100
       DeploymentController:
         Type: CODE_DEPLOY
+      LoadBalancers:
+        - ContainerName: !Sub '${ProjectName}-${Environment}-app'
+          ContainerPort: 8080
+          TargetGroupArn: !Ref ECSTargetGroupBlue
       NetworkConfiguration:
         AwsvpcConfiguration:
           AssignPublicIp: DISABLED
