--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -59,7 +59,7 @@ Resources:
       ThumbprintList:
         - '6942917711d95155985012e84736f116503c75d4'
 
-  # VPC and Networking (keeping your original setup)
+  # VPC and Networking
   VPC:
     Type: AWS::EC2::VPC
     Properties:
@@ -415,7 +415,7 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
 
-  # GitHub Actions Role (This was missing in your original template)
+  # GitHub Actions Role (OIDC)
   GitHubActionsRole:
     Type: AWS::IAM::Role
     Properties:
@@ -540,6 +540,56 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
 
+  # CodeBuild Service Role (used by the CodeBuild project)
+  CodeBuildServiceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub '${ProjectName}-${Environment}-codebuild-role'
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codebuild.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: CodeBuildPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ProjectName}-${Environment}-build-project:*'
+              - Effect: Allow
+                Action:
+                  - ecr:GetAuthorizationToken
+                  - ecr:BatchCheckLayerAvailability
+                  - ecr:GetDownloadUrlForLayer
+                  - ecr:CompleteLayerUpload
+                  - ecr:InitiateLayerUpload
+                  - ecr:PutImage
+                  - ecr:UploadLayerPart
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - s3:PutObject
+                  - s3:GetObject
+                  - s3:GetObjectVersion
+                  - s3:GetBucketAcl
+                  - s3:GetBucketLocation
+                Resource:
+                  - !Sub 'arn:aws:s3:::${ArtifactStoreBucket}/*'
+                  - !Sub 'arn:aws:s3:::${ArtifactStoreBucket}'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-codebuild-role'
+        - Key: Environment
+          Value: !Ref Environment
+
+  # CodePipeline Service Role (fixed S3 ARNs)
   CodePipelineServiceRole:
     Type: AWS::IAM::Role
     Properties:
@@ -562,12 +612,12 @@ Resources:
                   - s3:GetObjectVersion
                   - s3:PutObject
                   - s3:PutObjectAcl
-                Resource: !Sub '${ArtifactStoreBucket}/*'
+                Resource: !Sub 'arn:aws:s3:::${ArtifactStoreBucket}/*'
               - Effect: Allow
                 Action:
                   - s3:GetBucketVersioning
                   - s3:ListBucket
-                Resource: !GetAtt ArtifactStoreBucket.Arn
+                Resource: !Sub 'arn:aws:s3:::${ArtifactStoreBucket}'
               - Effect: Allow
                 Action:
                   - codedeploy:CreateDeployment
@@ -799,55 +849,6 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
 
-  # CodeBuild Service Role
-  CodeBuildServiceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: !Sub '${ProjectName}-${Environment}-codebuild-role'
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: codebuild.amazonaws.com
-            Action: sts:AssumeRole
-      Policies:
-        - PolicyName: CodeBuildPolicy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogGroup
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ProjectName}-${Environment}-build-project:*'
-              - Effect: Allow
-                Action:
-                  - ecr:GetAuthorizationToken
-                  - ecr:BatchCheckLayerAvailability
-                  - ecr:GetDownloadUrlForLayer
-                  - ecr:CompleteLayerUpload
-                  - ecr:InitiateLayerUpload
-                  - ecr:PutImage
-                  - ecr:UploadLayerPart
-                Resource: '*'
-              - Effect: Allow
-                Action:
-                  - s3:PutObject
-                  - s3:GetObject
-                  - s3:GetObjectVersion
-                  - s3:GetBucketAcl
-                  - s3:GetBucketLocation
-                Resource: 
-                  - !Sub '${ArtifactStoreBucket.Arn}/*'
-                  - !GetAtt ArtifactStoreBucket.Arn
-      Tags:
-        - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-codebuild-role'
-        - Key: Environment
-          Value: !Ref Environment
-
   # CodePipeline
   CodePipeline:
     Type: AWS::CodePipeline::Pipeline
@@ -957,39 +958,3 @@ Outputs:
     Value: !GetAtt ApplicationLoadBalancer.DNSName
     Export:
       Name: !Sub '${ProjectName}-${Environment}-ALB-DNS'
-
-  ApplicationURL:
-    Description: 'URL to access the application'
-    Value: !Sub 'http://${ApplicationLoadBalancer.DNSName}'
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-App-URL'
-
-  ECRRepositoryURI:
-    Description: 'ECR Repository URI'
-    Value: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepository}'
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-ECR-URI'
-
-  ECSClusterName:
-    Description: 'ECS Cluster Name'
-    Value: !Ref ECSCluster
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-ECS-Cluster'
-
-  ECSServiceName:
-    Description: 'ECS Service Name'
-    Value: !Ref ECSService
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-ECS-Service'
-
-  GitHubActionsRoleArn:
-    Description: 'GitHub Actions Role ARN for OIDC'
-    Value: !GetAtt GitHubActionsRole.Arn
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-GitHub-Actions-Role-ARN'
-
-  CodePipelineName:
-    Description: 'CodePipeline Name'
-    Value: !Ref CodePipeline
-    Export:
-      Name: !Sub '${ProjectName}-${Environment}-Pipeline-Name'
